Added invalid result warning

--- a/source/template.html
+++ b/source/template.html
@@ -48,3 +48,5 @@
     <div id="warning-message">Warning: This field already has a value. Are you sure you would like to replace it?</div>
     <button id="yes" class="whitebutton">Yes</button><button id="no" class="bluebutton">No</button>
 </div>
+
+<div class="error-box">Invalid entry!</div>
